--- a/SafariOmnibar/SearchProvidersEditor.xib
+++ b/SafariOmnibar/SearchProvidersEditor.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">11A511</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1881</string>
+		<string key="IBDocument.SystemVersion">11B26</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1881</string>
+			<string key="NS.object.0">1617</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -31,8 +31,11 @@
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.Metadata">
-			<string key="NS.key.0">PluginDependencyRecalculationVersion</string>
-			<integer value="1" key="NS.object.0"/>
+			<bool key="EncodedWithXMLCoder">YES</bool>
+			<object class="NSArray" key="dict.sortedKeys" id="0">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+			</object>
+			<reference key="dict.values" ref="0"/>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -124,7 +127,7 @@
 											<string key="NSFrameSize">{438, 147}</string>
 											<reference key="NSSuperview" ref="544957379"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
+											<reference key="NSNextKeyView" ref="703694269"/>
 											<string key="NSReuseIdentifierKey">_NS:1197</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTableHeaderView" key="NSHeaderView" id="1033256710">
@@ -133,6 +136,7 @@
 												<string key="NSFrameSize">{438, 17}</string>
 												<reference key="NSSuperview" ref="1027107339"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="544957379"/>
 												<reference key="NSTableView" ref="508655104"/>
 											</object>
 											<object class="_NSCornerView" key="NSCornerView">
@@ -328,7 +332,7 @@
 							<string key="NSFrame">{{20, 49}, {440, 165}}</string>
 							<reference key="NSSuperview" ref="953170167"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="544957379"/>
+							<reference key="NSNextKeyView" ref="1027107339"/>
 							<string key="NSReuseIdentifierKey">_NS:1193</string>
 							<int key="NSsFlags">133682</int>
 							<reference key="NSVScroller" ref="703694269"/>
@@ -340,9 +344,10 @@
 						<object class="NSButton" id="687271055">
 							<reference key="NSNextResponder" ref="953170167"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{374, 12}, {92, 32}}</string>
+							<string key="NSFrame">{{374, 13}, {92, 32}}</string>
 							<reference key="NSSuperview" ref="953170167"/>
 							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:161</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="582273938">
@@ -363,7 +368,7 @@
 						<object class="NSButton" id="988199048">
 							<reference key="NSNextResponder" ref="953170167"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{77, 12}, {127, 32}}</string>
+							<string key="NSFrame">{{77, 13}, {127, 32}}</string>
 							<reference key="NSSuperview" ref="953170167"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="687271055"/>
@@ -668,9 +673,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<object class="NSArray" key="object" id="0">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-						</object>
+						<reference key="object" ref="0"/>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
